# dify-plugin

./: .gitignore  AGENT.md  Makefile  README.md  dify  manifest.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: package.yml
scripts/: dev_cli.py  install_dify_plugin_cli.py  package-plugin.js
src/: AGENT.md  __init__.py  execute.py
src/chartwork/: README.md  __init__.py  index.js  manifest.json
src/chatwork/: README.md  __init__.py  manifest.json
src/hello_world/: README.md  __init__.py  manifest.json
tests/: conftest.py  test_chatwork_plugin.py  test_execute.py
