[project]
name = "starter-tool-plugin"
version = "0.1.0"
description = "A minimal Dify tool plugin scaffold"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Proprietary"}
authors = [{ name = "your-name" }]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

